# aragorn

./: .gitignore  CMakeLists.txt  CodeOfConduct.md  LICENSE  README.md  config.h.in
App/: App.cpp  App.h  Aragorn.cpp  Aragorn.h  Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  CMakeLists.txt  CMode.cpp  CMode.h  Colour.cpp  Colour.h  Eddy.cpp  Eddy.h  Editor.cpp  Editor.h  Event.h  FileSelector.h  Gutter.cpp  Layout.cpp  LexerMode.h  MiniBuffer.h  Modal.h  Mode.cpp  Mode.h  Project.cpp  StatusBar.cpp  StatusBar.h  Theme.cpp  Theme.h  Widget.cpp  Widget.h
LSP/: LSP.cpp  LSP.h
LSP/Schema/: AnnotatedTextEdit.h  CMakeLists.txt  ChangeAnnotation.h  ClientCapabilities.h  CodeDescription.h  CompletionContext.h  CompletionItem.h  CompletionItemKind.h  CompletionItemLabelDetails.h  CompletionItemTag.h  CompletionList.h  CompletionParams.h  CompletionTriggerKind.h  Diagnostic.h  DiagnosticRelatedInformation.h  DiagnosticSeverity.h  DiagnosticTag.h  DidChangeTextDocumentParams.h  DidCloseTextDocumentParams.h  DidOpenTextDocumentParams.h  DidSaveTextDocumentParams.h  DocumentFilter.h  DocumentFormattingParams.h  DocumentRangeFormattingParams.h  FormattingOptions.h  InitializeParams.h  InitializeResult.h  InsertReplaceEdit.h  InsertTextFormat.h  InsertTextMode.h  LSPBase.h  LSPCommand.h  Location.h  LocationLink.h  MarkupContent.h  MarkupKind.h  OptionalVersionedTextDocumentIdentifier.h  Position.h  PositionEncodingKind.h  PublishDiagnosticsClientCapabilities.h  (+30 more)
LSP/TSParser/: CMakeLists.txt  CPPOutput.cpp  Parser.cpp  TSParser.cpp  TSParser.h
LibCore/: CMakeLists.txt  Checked.h  Defer.h  Error.cpp  Error.h  IO.cpp  IO.h  Integer.h  JSON.cpp  JSON.h  Lexer.cpp  Lexer.h  Logging.cpp  Logging.h  Options.cpp  Options.h  Pipe.h  Process.h  Result.h  ScopeGuard.h  StringScanner.h  StringUtil.cpp  StringUtil.h  Token.cpp  Token.h  Utf8.cpp  Utf8.h
Util/: CMakeLists.txt  json.cpp
share/: Darwin.json  Linux.json  settings.json
